--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ limitations under the License.
 
   <groupId>org.apache</groupId>
   <artifactId>sqoop</artifactId>
-  <version>1.99.1</version>
+  <version>1.99.1-cdh4.2.0-SNAPSHOT</version>
   <description>Apache Sqoop</description>
   <name>Sqoop</name>
   <packaging>pom</packaging>
