--- a/submission/mapreduce/pom.xml
+++ b/submission/mapreduce/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.sqoop</groupId>
     <artifactId>submission</artifactId>
-    <version>1.99.1</version>
+    <version>1.99.1-cdh4.2.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.sqoop.submission</groupId>
