Fixing handling of releases by snapshot repo

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,9 @@ limitations under the License.
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
     </repository>
     <repository>
       <id>datanucleus</id>
