--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -123,7 +123,7 @@ show.prompt_conns_to_show = @|bold {0} connection(s) to show: |@
 show.prompt_conn_info = Connection with id {0} and name {1} (Created {2}, Updated {3})
 
 show.prompt_display_all_connectors = Display all connectors
-show.prompt_display_connector_cid = Display the connector with xid
+show.prompt_display_connector_cid = Display the connector with cid
 show.connector_usage = Usage: show connector
 show.prompt_connectors_to_show = @|bold {0} connection(s) to show: |@
 show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n \
