--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -47,11 +47,11 @@ connection.jdbcProperties.label = JDBC Connection Properties
 connection.jdbcProperties.help = Enter any JDBC properties that should be \
                    supplied during the creation of connection.
 
-# Table From
+# Table Form
 #
 table.label = Database configuration
 table.help = You must supply the information requested in order to create \
-                  a connection object.
+                  a job object.
 
 # Table name
 table.tableName.label = Table name
