--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -170,3 +170,20 @@ table.header.version = Version
 table.header.class = Class
 table.header.type = Type
 table.header.connector = Connector
+
+#Form displayer resources
+formdisplayer.supported_job_types = Supported job types
+formdisplayer.connection = Connection
+formdisplayer.job = Job
+formdisplayer.forms_jobtype = Forms for job type
+formdisplayer.form = form
+formdisplayer.name = Name
+formdisplayer.label = Label
+formdisplayer.help = Help
+formdisplayer.input = Input
+formdisplayer.type = Type
+formdisplayer.mask = Mask
+formdisplayer.size = Size
+formdisplayer.possible_values = Possible values
+formdisplayer.unsupported_datatype = Unsupported data type
+formdisplayer.input_sensitive = This input is sensitive
