--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -53,6 +53,10 @@ table.label = Database configuration
 table.help = You must supply the information requested in order to create \
                   a job object.
 
+# Schema name
+table.schemaName.label = Schema name
+table.schemaName.help = Schema name to process data in the remote database
+
 # Table name
 table.tableName.label = Table name
 table.tableName.help = Table name to process data in the remote database
