--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -187,3 +187,5 @@ formdisplayer.size = Size
 formdisplayer.possible_values = Possible values
 formdisplayer.unsupported_datatype = Unsupported data type
 formdisplayer.input_sensitive = This input is sensitive
+
+formdisplayer.warning_message = There were warnings while create or update, but saved successfully.
