--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -122,6 +122,7 @@ show.prompt_display_conn_xid = Display the connection with xid
 show.conn_usage = Usage: show connection
 show.prompt_conns_to_show = @|bold {0} connection(s) to show: |@
 show.prompt_conn_info = Connection with id {0} and name {1} (Created {2}, Updated {3})
+show.prompt_conn_cid_info = Using Connector id {0}
 
 show.prompt_display_all_connectors = Display all connectors
 show.prompt_display_connector_cid = Display the connector with cid
@@ -138,6 +139,7 @@ show.prompt_display_job_jid = Display jobwith given jid
 show.job_usage = Usage: show job
 show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
 show.prompt_job_info = Job with id {0} and name {1} (Created {2}, Updated {3})
+show.prompt_job_xid_cid_info = Using Connection id {0} and Connector id {1}
 
 show.prompt_display_all_servers = Display all server information
 show.prompt_display_server_host = Display server host name
