--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -164,6 +164,8 @@ sqoop.prompt_shell_loadrc = Loading resource file {0}
 sqoop.prompt_shell_loadedrc = Resource file loaded.
 
 submission.usage = Usage: submission {0}
+submission.prompt_synchronous = Wait for submission to finish
+submission.prompt_poll_timeout = How often the client should communicate with the server in milliseconds (Default: 10000)
 
 # Various Table headers
 table.header.id = Id
