--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,14 @@ limitations under the License.
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>9</version>
+    <groupId>com.cloudera.cdh</groupId>
+    <artifactId>cdh-root</artifactId>
+    <version>4.4.0-SNAPSHOT</version>  
   </parent>
 
   <groupId>org.apache</groupId>
   <artifactId>sqoop</artifactId>
-  <version>1.99.2</version>
+  <version>1.99.2-cdh4.4.0-SNAPSHOT</version>
   <description>Apache Sqoop</description>
   <name>Sqoop</name>
   <packaging>pom</packaging>
@@ -87,7 +87,51 @@ limitations under the License.
     <url>https://git-wip-us.apache.org/repos/asf?p=sqoop.git</url>
   </scm>
 
+  <repositories>
+    <repository>
+      <id>cdh.releases.repo</id>
+      <url>https://repository.cloudera.com/content/groups/cdh-releases-rcs</url>
+      <name>CDH Releases Repository</name>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>cdh.snapshots.repo</id>
+      <url>https://repository.cloudera.com/content/repositories/snapshots</url>
+      <name>CDH Snapshots Repository</name>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+    <repository>
+      <id>datanucleus</id>
+      <url>http://www.datanucleus.org/downloads/maven2</url>
+      <name>Datanucleus</name>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>java.net repository</id>
+      <url>http://download.java.net/maven/2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>cdh.thirdparty.repo</id>
+      <url>https://repository.cloudera.com/content/repositories/third-party</url>
+      <name>Cloudera Third Party Repository</name>
+      <snapshots><enabled>false</enabled></snapshots>
+    </repository>
+  </repositories>
+
   <properties>
+    <javaVersion>1.6</javaVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compile.source>1.6</maven.compile.source>
     <maven.compile.target>1.6</maven.compile.target>
@@ -96,7 +140,7 @@ limitations under the License.
     <commons-io.version>2.4</commons-io.version>
     <derby.version>10.8.2.2</derby.version>
     <hadoop.1.version>1.0.3</hadoop.1.version>
-    <hadoop.2.version>2.0.2-alpha</hadoop.2.version>
+    <hadoop.2.version>${cdh.hadoop.version}</hadoop.2.version>
     <guava.version>11.0.2</guava.version>
     <json-simple.version>1.1</json-simple.version>
     <junit.version>4.9</junit.version>
@@ -405,9 +449,52 @@ limitations under the License.
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <inherited>false</inherited>
+          <configuration>
+            <rules>
+              <requireMavenVersion>
+                <version>[3.0.0,)</version>
+              </requireMavenVersion>
+              <requireJavaVersion>
+                <version>[${javaVersion}.0,${javaVersion}.1000}]</version>
+              </requireJavaVersion>
+            </rules>
+          </configuration>
+          <executions>
+            <execution>
+              <id>clean</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <phase>pre-clean</phase>
+            </execution>
+            <execution>
+              <id>default</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <phase>validate</phase>
+            </execution>
+            <execution>
+              <id>site</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <phase>pre-site</phase>
+            </execution>
+        </executions>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>1.0</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -437,6 +524,9 @@ limitations under the License.
                   <exclude>*.log</exclude>
                   <exclude>**/nb-configuration.xml</exclude>
                   <exclude>**.patch</exclude>
+                  <exclude>cloudera/*</exclude>
+                  <exclude>*buildinfo</exclude>
+                  <exclude>**/*.patch</exclude>
                 </excludes>
               </configuration>
             </execution>
