--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -144,6 +144,9 @@ show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
 show.prompt_job_info = Job with id {0} and name {1} (Created {2}, Updated {3})
 show.prompt_job_xid_cid_info = Using Connection id {0} and Connector id {1}
 
+show.prompt_display_all_submissions = Display all submissions
+show.prompt_display_all_submissions_jid = Display all submissions given jid
+
 show.prompt_display_all_servers = Display all server information
 show.prompt_display_server_host = Display server host name
 show.prompt_display_server_port = Display server port number
@@ -177,6 +180,10 @@ table.header.version = Version
 table.header.class = Class
 table.header.type = Type
 table.header.connector = Connector
+table.header.jid = Job Id
+table.header.eid = External Id
+table.header.status = Status
+table.header.date = Last Update Date
 
 #Form displayer resources
 formdisplayer.supported_job_types = Supported job types
