SQOOP-1082: Implement pre-commit testing with Jenkins
(Jarek Jarcec Cecho via Kate Ting)

Conflicts:
	pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -544,6 +544,7 @@ limitations under the License.
                   <exclude>cloudera/*</exclude>
                   <exclude>*buildinfo</exclude>
                   <exclude>**/*.patch</exclude>
+                  <exclude>patch-process/*</exclude>
                 </excludes>
               </configuration>
             </execution>
