--- a/pom.xml
+++ b/pom.xml
@@ -545,6 +545,7 @@ limitations under the License.
                   <exclude>*buildinfo</exclude>
                   <exclude>**/*.patch</exclude>
                   <exclude>patch-process/*</exclude>
+                  <exclude>.metadata/</exclude>
                 </excludes>
               </configuration>
             </execution>
