--- a/repository/repository-derby/pom.xml
+++ b/repository/repository-derby/pom.xml
@@ -43,6 +43,11 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
