--- a/pom.xml
+++ b/pom.xml
@@ -684,6 +684,14 @@ limitations under the License.
       </roles>
     </developer>
     <developer>
+      <id>hshreedharan</id>
+      <name>Hari Shreedharan</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>Committer</role>
+      </roles>
+    </developer>
+    <developer>
       <id>jarcec</id>
       <name>Jaroslav Cecho</name>
       <organization>Cloudera</organization>
@@ -728,7 +736,7 @@ limitations under the License.
         <role>PMC Member</role>
       </roles>
     </developer>
-     <developer>
+    <developer>
       <id>posix4e</id>
       <name>Alex Newman</name>
       <organization>Opower</organization>
@@ -752,6 +760,14 @@ limitations under the License.
       <roles>
         <role>Committer</role>
         <role>PMC Member</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>venkatnrangan</id>
+      <name>Venkat Ranganathan</name>
+      <organization>Hortonworks</organization>
+      <roles>
+        <role>Committer</role>
       </roles>
     </developer>
   </developers>
