--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -38,6 +38,9 @@ output.storageType.help = Target on Hadoop ecosystem where to store data
 output.outputFormat.label = Output format
 output.outputFormat.help = Format in which data should be serialized
 
+output.compression.label = Compression format
+output.compression.help = Compression that should be used for the data
+
 output.outputDirectory.label = Output directory
 output.outputDirectory.help = Output directory for final data
 
