--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -73,6 +73,14 @@ table.columns.help = Specific columns of a table name or a table SQL
 table.warehouse.label = Data warehouse
 table.warehouse.help = The root directory for data
 
+# Stage table name
+table.stageTableName.label = Stage table name
+table.stageTableName.help = Name of the stage table to use
+
+# Clear stage table
+table.clearStageTable.label = Clear stage table
+table.clearStageTable.help = Indicate if the stage table should be cleared
+
 # Table datadir
 table.dataDirectory.label = Data directory
 table.dataDirectory.help = The sub-directory under warehouse for data
