SQOOP-1952: Sqoop2: Load miniclusters at beginning of integration tests
(Abraham Elmahrek via Jarek Jarcec Cecho)

Conflicts:
	test/src/main/java/org/apache/sqoop/test/testcases/TomcatTestCase.java
	test/src/test/java/org/apache/sqoop/integration/connector/jdbc/generic/IncrementalReadTest.java
	test/src/test/java/org/apache/sqoop/integration/connector/kite/FromRDBMSToKiteTest.java

--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@ limitations under the License.
     <hadoop.2.version>${cdh.hadoop.version}</hadoop.2.version>
     <guava.version>11.0.2</guava.version>
     <json-simple.version>1.1</json-simple.version>
-    <testng.version>6.8.13</testng.version>
+    <testng.version>6.8.17</testng.version>
     <mockito.version>1.9.5</mockito.version>
     <powermock.version>1.5.6</powermock.version>
     <log4j.version>1.2.16</log4j.version>
@@ -197,6 +197,7 @@ limitations under the License.
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <excludedGroups>slow</excludedGroups>
+              <reportNameSuffix>fast</reportNameSuffix>
             </configuration>
           </plugin>
 
@@ -205,6 +206,7 @@ limitations under the License.
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
               <excludedGroups>slow</excludedGroups>
+              <reportNameSuffix>slow</reportNameSuffix>
             </configuration>
           </plugin>
         </plugins>
@@ -227,6 +229,7 @@ limitations under the License.
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <groups>slow</groups>
+              <reportNameSuffix>slow</reportNameSuffix>
             </configuration>
           </plugin>
 
@@ -235,6 +238,7 @@ limitations under the License.
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
               <groups>slow</groups>
+              <reportNameSuffix>slow</reportNameSuffix>
             </configuration>
           </plugin>
         </plugins>
@@ -726,6 +730,10 @@ limitations under the License.
               <property>
                 <name>usedefaultlisteners</name>
                 <value>false</value> <!-- disabling default listeners is optional -->
+              </property>
+              <property>
+                <name>listener</name>
+                <value>org.testng.reporters.JUnitReportReporter</value>
               </property>
             </properties>
           </configuration>
