--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -56,7 +56,7 @@ limitations under the License.
     </dependency>
 
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
 
