--- a/test/pom.xml
+++ b/test/pom.xml
@@ -133,7 +133,7 @@ limitations under the License.
     </dependency>
 
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
 
